Go as high as possible with Java versions (17 to target 22, toolchain 25) (#289)